# DAA_Landing_Repository

./: .gitignore  .gitmodules  README.md
ros_ws/src/daa_exec/: package.xml  setup.cfg  setup.py
ros_ws/src/daa_exec/daa_exec/: daa_simulation.py
ros_ws/src/movement_plugin/: CMakeLists.txt  package.xml
ros_ws/src/movement_plugin/include/movement_plugin/: movement_3d_plugin.hpp
ros_ws/src/movement_plugin/src/: movement_3d_plugin.cpp
ros_ws/src/uav_bringup/: CMakeLists.txt  package.xml
ros_ws/src/uav_bringup/launch/: main_uav_fligth.launch.py  start_world.launch.py  uav_launcher.launch.py
ros_ws/src/uav_bringup/src/: save_uav_info.cpp
ros_ws/src/uav_bringup/worlds/: Desert.sdf  ERAU.sdf  Mountains.sdf  NewYork.sdf  empty_world.sdf
ros_ws/src/uav_description/: CMakeLists.txt  package.xml
ros_ws/src/uav_description/meshes/Cessna/: body.dae  body.stl  cessna_prop.dae  cessna_prop.stl  elevators.dae  elevators.stl  left_aileron.dae  left_aileron.stl  left_flap.dae  left_flap.stl  right_aileron.dae  right_aileron.stl  right_flap.dae  right_flap.stl  rudder.dae  rudder.stl
ros_ws/src/uav_description/meshes/VTOL/: body.dae  rotor1.dae  rotor2.dae  rotor3.dae  rotor4.dae  rotor5.dae  rotor6.dae  rotor7.dae  rotor8.dae  rotor9.dae
ros_ws/src/uav_description/urdf/fixed_wing/: add_fog.xacro  airplane.xacro  airplane_gazebo.xacro  main_fixed_wing.xacro
ros_ws/src/uav_description/urdf/vtol/: main_vtol.xacro  vtol.xacro  vtol_gazebo.xacro
ros_ws/src/uav_dynamics/: CMakeLists.txt  package.xml
ros_ws/src/uav_dynamics/include/uav_dynamics/: geometric_guidance.hpp
ros_ws/src/uav_dynamics/msg/: AvoidanceStates.msg
ros_ws/src/uav_dynamics/src/: fixed_wing_model.cpp  geometric_guidance.cpp
