<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movement_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jorgestu20@gmail.com">jorge</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_bridge</depend>

  <!--Requirements for the movement_3d_plugin-->
  <depend>tf2_ros</depend>
  <depend>gz-sim7</depend>
  <depend>gz-common5</depend>
  <depend>builtin_interfaces</depend>
  <depend>gz-math7</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
