<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_dynamics</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jorgestu20@gmail.com">jorge</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- Install tghe INtuders message-->
  <depend>rclcpp</depend>
  <depend>gnss_multipath_plugin</depend> 
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!--Insrtall the packges required for the Fixed_wing Guidance-->
  <depend>std_msgs</depend>
  <build_depend>eigen3</build_depend>
  <exec_depend>eigen3</exec_depend>

  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
